public/css/style.css
@import './about.css';

body {
    margin: 0px;
    font-family: 'Ubuntu', sans-serif;
}

hr {
    border: solid 1px rgb(221, 221, 221);
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
    width: 23%;
}

.nav-wrapper {
    height: 9vh;
    position: fixed;
    width: 100vw;
    z-index: 1;
    display: flex;
    justify-content: space-around;
    align-items: center;
    transition: background-color 0.7s;
}

.nav-wrapper-bg-control {
    background-color: #273c75;
    transition: background-color 0.7s;
}

.brand {
    font-weight: 600;
    font-size: 1.5em;
    color: white;
    transition: color 0.7s;
    text-decoration: none;
}



.nav-right-side {
    display: flex;
}

.nav-wrapper > .nav-right-side > div {
    padding: 10px;
}

.nav-link-wrapper > a {
    text-transform: uppercase;
    color: white;
    text-decoration: none;
    border-bottom: 1px solid transparent;
    transition: border-color 0.7s;
    padding-bottom: 0.3em;
    cursor: pointer;
}

.nav-link-wrapper-active > a {
    border-color: #44bd32;
}

/* =============================================================== */

.container {
    display: grid;
    grid-template-columns: 1fr;
    /* width: 100%; */
}

.extend-h {
    height: 100vh;
}

.extend-w {
    width: 100vw;
}

.extend-hw {
    height: 100vh;
    width: 100%;
}

.banner {
    position: relative;
}

.banner-container {
    display: flex;
    justify-content: start;
    align-items: center;
    height: 100vh;
}

.banner-container-fluid {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* rgba(0, 0, 0, 0.7) */
.banner-container-fluid > h1 {
    /* color: #f5f6fa; */
    /* color: rgb(206, 206, 206); */
    color: #273c75;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
}

.banner-bg {
    height: 100%;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    transform: scaleX(-1);
}

.banner-description {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding-left: 20%;
    position: absolute;
}

.banner-description h1 {
    font-weight: 500;
    font-size: 5em;
    line-height: 15px;
    color: #f5f6fa;
    text-shadow: 5px 5px 20px black;
    width: auto;
}

.banner-description p {
    font-weight: 350;
    font-size: 1.5em;
    line-height: 0;
    color: #f5f6fa;
    text-shadow: 1px 1px 1px black;
}

.banner-description button {
    border-radius: 0.3em;
    border: 0;
    font-weight: 500;
    margin-top: 1em;
    padding: 0.8em;
    outline: none;
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0.1);
    border: 1px solid #44bd32;
    color: #dcdde1;
}

.banner-description p,button {
    margin-left: 5px;
}

.items-wrapper {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    margin: 10px;
}

.item-wrapper {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.item-bg-img {
    height: 350px;
    width: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    transition: filter 0.7s;
    border-radius: 1.5em;
    border: solid 1px transparent;
}

.item-img-desc-wrapper {
    position: absolute;
    top: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    height: 100%;
    padding: 0 100px;
    padding-top: 20px;
}

.item-img {
    width: 10vh;
}

.item-img img {
    width: 100%;
}

.item-description {
    width: auto;
}

.item-description p {
    color: transparent;
    font-weight: 500;
    transition: color 0.7s;
    height: 2em;
    width: 100%;
}

/* This will target display width between 701px - 1200px */
@media screen and (max-width: 1200px) {

    .items-wrapper {
        grid-template-columns: repeat(2, 1fr);
    }

    .banner-description {
        font-size: 0.7em;
    }

    .item-img-desc-wrapper {
        padding: 0 20px;
    }

    .item-img-desc-wrapper .item-description > p {
        color: #dcdde1;
        transition: color 0.7s;
    }

    .item-description p {
        font-size: 0.9em;
    }
}

/* This will target display width between 0px - 700px */
@media screen and (max-width: 700px) {

    .brand {
        font-size: 1em;
    }

    .nav-link-wrapper > a {
        font-size: 0.7em;
    }

    .banner-description {
        padding-left: 30px;
        font-size: 0.5em;
    }

    .items-wrapper {
        grid-template-columns: 1fr;
    }

    .banner-container-fluid > h1 {
        font-size: 1.2em;
    }
}

/* effects only on desktop check */
@media (hover: hover) and (pointer: fine) and (min-width: 1200px) {
    .brand:hover {
        color: #44bd32;
    }

    .item-wrapper:hover > .item-bg-img {
        filter: brightness(30%);
    }

    .item-wrapper:hover > .item-img-desc-wrapper > .item-description > p {
        color: #dcdde1;
    }
    
    .nav-link-wrapper > a:hover {
        border-color: #44bd32;
    }
}

